# fps

./: Cargo.toml  README.md  note
anchor/: note
anchor/nft/: .gitignore  Anchor.toml  package.json  recover.json
anchor/nft/programs/nft/: Cargo.toml
anchor/nft/programs/nft/src/: lib.rs
anchor/nft/programs/nft/src/instructions/: create_collection.rs  create_nft.rs  mod.rs  print_nft.rs
anchor/nft/tests/: nft.ts  test.ts
fps/: Cargo.toml  note  start_2_instances.sh
fps/resources/: ak_only.glb  fps_ak.glb  m_player.gltf
fps/resources/shaders/: pbr.fs
fps/src/: dto.rs  m_player.rs  main.rs  net_client.rs  sol_client.rs  utils.rs
resources/: Character.glb
resources/shaders/: pbr.fs  pbr.vs
server/: Cargo.toml
server/src/: dto.rs  main.rs
src/: main.rs  net_client.rs
ts_client/src/: .env  buy_nft.ts  idl  package.json  pnpm-lock.yaml  tsconfig.json  types  upload_nft_collection.ts
