[package]
name = "fps"
version = "0.1.0"
edition = "2024"


[dependencies]
raylib = { path = "/home/bqrry/Desktop/raylib-rs/raylib" }
enet = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
anchor-client = "0.30.1" 
serde_json = "1.0.140"
mpl-token-metadata = "5.1.0"
anyhow = "1.0"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking","json", "native-tls"] }
solana-account-decoder = "=1.17.3"
dashmap = "6" 